# gator

./: AndGate.hs  General.hs  IO.hs  Input.hs  Line.hs  Logic.hs  Ops.hs  Output.hs  README  gator.cabal  main.hs
examples/: 4bitAdder.hs  fullAdder.hs  halfAdder.hs  runExample.hs  simple.hs
src/Gator/: Exaple.hs  Gates.hs
src/Language/: Gator.hs
src/Language/Gator/: Example.hs  Examples.hs  Gates.hs  General.hs  IO.hs  Logic.hs  Ops.hs
src/Language/Gator/Examples/: Err.hs  IO.hs
src/Language/Gator/Gates/: AND.hs  AndGate.hs  Input.hs  Line.hs  OR.hs  OrGate.hs  Output.hs  Trace.hs  XOR.hs  XOrGate.hs
src/Language/Gator/Ops/: AND.hs  General.hs  Input.hs  NextIDX.hs  OR.hs  Output.hs  Trace.hs  XOR.hs
tests/: runExample.hs
