name: gator
version: 0.0.1
author: John Van Enk
maintainer: vanenkj@gmail.com
license: BSD3
license-file: LICENSE
category: Language

synopsis: A package to construct boolean logic functions out of digital gates.
          description: A package to construgt boolean logic functions and compile them 
          to various forms.

build-type: Simple
cabal-version: >= 1.2.0

library
    build-depends: base >= 4 && < 5,
                   mtl >= 1.1.0.2 && < 1.2,
                   containers >= 0.2.0.1 && < 0.3
    exposed-modules: Language.Gator
    hs-source-dirs: src/
    ghc-options: -Wall
