name: gator
version: 0.0.1
author: John Van Enk
maintainer: vanenkj@gmail.com
license: BSD3
license-file: LICENSE
category: Language

synopsis: A package to construct boolean logic functions out of digital gates.
          description: A package to construgt boolean logic functions and compile them 
          to various forms.

build-type: Simple
cabal-version: >= 1.2.0

library
    build-depends: base >= 4 && < 5,
                   mtl >= 1.1.0.2 && < 1.2,
                   containers >= 0.2.0.1 && < 0.3,
                   lenses >= 0.1.2 && < 0.2,
                   fgl >= 5.4.2.2 && < 5.5,
                   graphviz >= 2999.5.0.0 && < 2999.6
    other-modules: Language.Gator.Gates.AndGate,
                   Language.Gator.Gates.Input,
                   Language.Gator.Gates.Trace,
                   Language.Gator.Gates.OrGate,
                   Language.Gator.Gates.XOrGate,
                   Language.Gator.Gates.Output
    exposed-modules: Language.Gator,
                     Language.Gator.Gates,
                     Language.Gator.General,
                     Language.Gator.IO,
                     Language.Gator.Logic,
                     Language.Gator.Ops,
                     Language.Gator.Ops.General,
                     Language.Gator.Ops.AND,
                     Language.Gator.Ops.OR,
                     Language.Gator.Ops.XOR,
                     Language.Gator.Ops.Trace,
                     Language.Gator.Ops.Input,
                     Language.Gator.Ops.Output,
                     Language.Gator.Examples.Err,
                     Language.Gator.Examples.IO
    hs-source-dirs: src/
    ghc-options: -Wall
